--- a/src/styles/sass/page/admin/_users.scss
+++ b/src/styles/sass/page/admin/_users.scss
@@ -90,6 +90,9 @@ main.admin-users-page {
         p {
             font-size: 20px;
             font-weight: 500;
+            @include mq('phone', max) {
+                font-size: 14px;
+            }
         }        
         @include mq('phone', max) {
             margin-bottom: 20px;
