--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -64,3 +64,7 @@ input[type="number"]::-webkit-outer-spin-button {
         opacity: 0.65;
     }
 }
+
+.bg-clip-unset {
+    background-clip: unset !important;
+}
