HOME PAGE / ADDED THE REFERRAL MODAL

--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -34,3 +34,7 @@ $enable-negative-margins: true;
         box-shadow: none !important;
     }
 }
+
+.form-control {
+    background-clip: unset !important;
+}
