--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -133,7 +133,7 @@
     position: absolute;
     bottom: 0;
     z-index: -1;
-    @include mq("tablet", max) {
+    @include mq("laptop", max) {
         display: none;
     }
 }
