--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -473,6 +473,13 @@
     max-width: 950px;
     padding: 0px;
 
+    .expression-icons {
+        z-index: 0;
+    }
+    .facial-style-icons {
+        z-index: 1;
+    }
+
     &__header {
         display: flex;
         justify-content: end;
