--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -88,6 +88,7 @@
                 height: 350px;
                 flex-direction: column;
                 justify-content: center;
+                align-items: flex-start;
                 @include mq("phone", max) {
                     height: 250px;
                 }
