SELECT FIGURE / FIXED THE SELECTING BUG

--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -116,6 +116,7 @@
                 line-height: 23px;
                 text-decoration: underline;
                 text-align: end;
+                cursor: pointer;
             }
             svg {
                 cursor: pointer;
