--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -39,5 +39,6 @@
 @import "page/admin/create/auction";
 @import "page/admin/create/direct-purchase";
 @import "page/admin/create/avatar";
+@import "page/admin/create/email";
 @import "page/admin/airdrop";
 @import "page/admin/setting";
