--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -348,6 +348,9 @@
         padding: 0px 60px;
         margin-top: 80px;
         margin-bottom: 80px;
+        @include mq("tablet", max) {
+            padding: 0 0;
+        }
         .current-value,
         .end-value {
             font-weight: bold;
