Profile / DressUP / Fixed the modal not opening issue

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -68,3 +68,10 @@ input[type="number"]::-webkit-outer-spin-button {
 .bg-clip-unset {
     background-clip: unset !important;
 }
+
+.hover\:text-green {
+    transition: 500ms;
+    &:hover {
+        color: $green;
+    }
+}
