--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -75,3 +75,17 @@ input[type="number"]::-webkit-outer-spin-button {
         color: $green;
     }
 }
+
+.password-eye-icon {
+    position: absolute;
+    color: rgb(179, 178, 178);
+    width: 20px;
+    height: 20px;
+    top: 38.5px;
+    right: 10px;
+    transition: 500ms;
+    cursor: pointer;
+    &:hover {
+        color: $black;
+    }
+}
