avatar customization complete

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -40,5 +40,6 @@
 @import "page/admin/create/direct-purchase";
 @import "page/admin/create/avatar";
 @import "page/admin/create/email";
+@import "page/admin/create/customize-avatar";
 @import "page/admin/airdrop";
 @import "page/admin/setting";
