Direct Purchase / Created the page and added content with proper styles

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -30,6 +30,7 @@
 @import "page/purchase/auction.scss";
 @import "page/purchase/home.scss";
 @import "page/purchase/homeWithSign.scss";
+@import "page/direct-purchase";
 
 // admin style
 @import "page/admin/common";
