--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -44,7 +44,7 @@
         }
         &-list {
             font-weight: 600;
-            font-size: 24px;
+            font-size: 18px;
             line-height: 29px;
             padding: 8px 30px;
             border: 1px solid white;
@@ -54,11 +54,11 @@
             text-transform: uppercase;
             cursor: pointer;
             @include mq("laptop-wide", max) {
-                font-size: 18px;
+                font-size: 14px;
                 padding: 8px 16px;
             }
             @include mq("laptop", max) {
-                font-size: 16px;
+                font-size: 14px;
             }
         }
         .form-check-input {
@@ -129,6 +129,10 @@
             }
         }
         .cryptocoin-tab {
+            button {
+                font-size: 18px;
+                width: 300px;
+            }
             .cryptocoin-select {
                 margin-bottom: 8px;
                 margin-right: 8px;
@@ -254,6 +258,39 @@
                 display: flex;
                 align-items: center;
                 margin-right: 8px;
+            }
+        }
+        .externalwallets-tab {
+            text-align: center;
+            .col-sm-6 {
+                margin-bottom: 16px;
+            }
+            .wallet-item {
+                cursor: pointer;
+                width: 100%;
+                height: 100%;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                border: 2px solid #525252;
+                img {
+                    margin-bottom: 16px;
+                    width: 42px;
+                    height: 42px;
+                    @include mq("phone", max) {
+                        width: 32px;
+                        height: 32px;
+                    }
+                }
+                p {
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 20px;
+                    color: #8f8f8f;
+                }
+                &.active {
+                    background-color: white;
+                    border-color: white;
+                }
             }
         }
         .payment-expire {
