--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -30,6 +30,7 @@
     }
     .payment-type__tab {
         padding: 0 60px;
+        padding-right: 30px;
         @include mq("tablet", max) {
             padding: 0;
         }
@@ -41,13 +42,13 @@
             justify-content: space-between;
             align-items: center;
             border: none;
-            margin-bottom: 55px;
+            margin-bottom: 0px;
         }
         &-list {
             font-weight: 600;
             font-size: 18px;
             line-height: 29px;
-            padding: 8px;
+            padding: 8px 3px;
             border: 1px solid white;
             &[aria-selected="false"] {
                 color: rgba(255, 255, 255, 0.5);
@@ -56,7 +57,7 @@
             cursor: pointer;
             @include mq("laptop-wide", max) {
                 font-size: 14px;
-                padding: 8px 16px;
+                padding: 8px;
             }
             @include mq("laptop", max) {
                 font-size: 14px;
@@ -448,4 +449,11 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
+}
+
+.payment-content {
+    display: flex;
+    height: 274px;
+    flex-direction: column;
+    justify-content: flex-end;
 }
