--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -530,6 +530,13 @@
         }
     }
 }
+.resend-2fa {
+    text-align: right;
+    a {
+        color: #23c865 !important;
+        font-size: 14px !important;
+    }
+}
 .dressup-modal {
     max-width: 950px;
     padding: 0px;
