--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -114,3 +114,10 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 12px;
     padding-bottom: 12px;
 }
+
+.hover\:bg-dark {
+    transition: 500ms;
+    &:hover {
+        background-color: #151515 !important;
+    }
+}
