--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -97,10 +97,6 @@ input[type="number"]::-webkit-outer-spin-button {
     width: max-content !important;
 }
 
-.fs-12px {
-    font-size: 12px;
-}
-
 .mt-16px {
     margin-top: 16px;
 }
@@ -121,3 +117,11 @@ input[type="number"]::-webkit-outer-spin-button {
         background-color: #151515 !important;
     }
 }
+
+// Begin: New Font Sizes
+@for $size from 12 to 16 {
+    .fs-#{$size}px {
+        font-size: #{$size}px !important;
+    }
+}
+// End: New Font Sizes
