--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -854,3 +854,59 @@
         border-radius: 100%;
     }
 }
+
+.wallet-referral-tab {
+    .title {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 30px;
+
+        letter-spacing: -0.025em;
+    }
+    .subtitle {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 30px;
+        letter-spacing: -0.01em;
+        word-spacing: 7px;
+    }
+    .rewards-box {
+        background-color: #242424;
+        padding: 20px;
+        margin-top: 23px;
+        margin-bottom: 15px;
+        .label {
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 20px;
+            letter-spacing: -0.01em;
+            color: #ffffff;
+            opacity: 0.4;
+        }
+        .value {
+            font-style: normal;
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 20px;
+            letter-spacing: -0.01em;
+            margin-top: 10px;
+        }
+    }
+    .duplicate-icon {
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        transition: 300ms;
+        &:hover {
+            color: lightgrey !important;
+        }
+    }
+    .btn-invite {
+        font-size: 24px;
+        padding: 10px 60px;
+        margin-top: 50px;
+    }
+}
