create avatar dress-up complete but not responsive yet

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -753,6 +753,7 @@
         justify-content: start;
         align-items: center;
         margin: 0px;
+        height: 200px;
         & > div {
             height: 200px;
             width: 149px;
@@ -761,16 +762,24 @@
             float: none;
             position: relative;
             & > div.image_div {
+                width: 100px;
                 margin-top: 50%;
+                margin-bottom: 10%;
                 position: relative;
                 div {
                     position: absolute;
+                    svg {
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+                img {
+                    width: 100%;
                 }
             }
             & > div.price_div {
                 width: 100%;
-                position: absolute;
-                bottom: 10%;
+                text-align: center;
             }
         }
         &::-webkit-scrollbar {
