--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -406,7 +406,8 @@
                     }
                     display: block;
                     tr {
-                        margin-bottom: 23px;
+                        margin-top: 10px;
+                        margin-bottom: 10px;
                         border-bottom: 2px solid #464646;
                         td {
                             padding: 16px 0;
