--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -374,6 +374,22 @@
             }
             table {
                 width: 100%;
+                .search {
+                    display: flex;
+                    justify-content: flex-end;
+                    .search-icon {
+                        margin: 12px;
+                        width: 20px;
+                        height: 20px;
+                        cursor: pointer;
+                        &:hover {
+                            color: #a7a7a7 !important;
+                        }
+                        &:active {
+                            color: yellow !important;
+                        }
+                    }
+                }
                 thead,
                 tbody tr {
                     display: table;
@@ -382,7 +398,7 @@
                 }
                 thead {
                     border-bottom: 2px solid #464646;
-                    width: calc(100% - 26px);
+                    width: 100%;
                     th {
                         padding: 16px 0px;
                     }
@@ -406,11 +422,10 @@
                     }
                     display: block;
                     tr {
-                        margin-top: 10px;
-                        margin-bottom: 10px;
-                        border-bottom: 2px solid #464646;
+                        border-top: 2px solid #464646;
                         td {
-                            padding: 16px 0;
+                            padding-top: 24px;
+                            padding-bottom: 16px;
                         }
                         &:hover {
                             background-color: #242424;
@@ -494,6 +509,12 @@
                         align-items: flex-end;
                     }
                 }
+            }
+            .star-checkbox {
+                width: 22px;
+                height: 22px;
+                margin-top: 4px;
+                margin-right: 18px;
             }
         }
     }
