--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -351,6 +351,16 @@
         }
         .connect-wallet {
             text-align: center;
+            color: white;
+            button: {
+                max-width: 400px;
+            }
+            button:disabled,
+            button[disabled] {
+                border: 1px solid #999999;
+                background-color: #1d1d1d;
+                color: #666666;
+            }
             h4 {
                 padding-bottom: 16px;
                 border-bottom: 2px solid #464646;
