--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -66,6 +66,7 @@
                         max-height: 350px;
                     }
                     display: block;
+                    padding-right: 20px;
                     tr {
                         margin-bottom: 23px;
                         border-bottom: 2px solid #464646;
