--- a/src/styles/sass/components/_buttons.scss
+++ b/src/styles/sass/components/_buttons.scss
@@ -37,6 +37,7 @@
         border: 1px solid #ffffff;
         text-transform: none;
         margin-right: 5px;
+        width: auto;
         &:hover {
             background: $black;
             border: 1px solid #ffffff;
@@ -51,9 +52,8 @@
             border-color: white;
             box-shadow: unset;
         }
-        @include mq("phone", max) {
-            font-size: 20px;
-            line-height: 24px;
+        @include mq("tablet", max) {
+            width: 33.33%;
         }
     }
 
