Payment / Crypto Coin / The input field is no disabled so that the user cannot change that

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -110,6 +110,10 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 12px;
     padding-bottom: 12px;
 }
+.py-10px {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 .hover\:bg-dark {
     transition: 500ms;
