--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -114,6 +114,9 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.pl-8px {
+    padding-left: 8px;
+}
 
 .hover\:bg-dark {
     transition: 500ms;
