--- a/src/styles/sass/page/admin/_common.scss
+++ b/src/styles/sass/page/admin/_common.scss
@@ -369,6 +369,7 @@ div.profile {
             svg {
                 width: 100%;
                 height: auto;
+                position: absolute;
             }
         }
         img {
