--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -681,6 +681,12 @@
     div.profile {
         margin: auto;
         border: none;
+        @include mq('phone', max) {
+            height: 100px;
+            div.image_div {
+                width: 80px;
+            }
+        }
     }
 
     &__header {
@@ -713,6 +719,12 @@
                 color: white;
             }
         }
+        @include mq('phone', max) {
+            margin-top: 5px;
+            margin-bottom: 5px;
+            font-size: 20px;
+            line-height: 24px;
+        }
     }
     .btn-save {
         color: white;
@@ -732,6 +744,10 @@
             background-color: white;
             color: $black;
         }
+        @include mq('phone', max) {
+            margin-bottom: 5px;
+            font-size: 20px;
+        }
     }
     &-hair-section {
         color: white;
@@ -741,7 +757,14 @@
         line-height: 22px;
         letter-spacing: 0.04em;
     }
-
+    div.components {
+        border-left: 1px solid white;
+        padding: 20px;
+        @include mq('phone', max) {
+            border-left: none;
+            border-top: 1px solid white;
+        }
+    }
     &-items-horizontal-list {
         scroll-behavior: smooth;
         float: none;
@@ -771,6 +794,7 @@
                     svg {
                         width: 100%;
                         height: auto;
+                        position: absolute;
                     }
                 }
                 img {
@@ -782,6 +806,29 @@
                 text-align: center;
             }
         }
+        @include mq('tablet', max) {
+            height: 170px;
+            & > div {
+                height: 170px;
+                width: 130px;
+                & > div.image_div {
+                    width: 80px;
+                }
+            }
+        }
+        @include mq('phone', max) {
+            height: 100px;
+            & > div {
+                height: 100px;
+                width: 80px;
+                & > div.image_div {
+                    width: 45px;
+                }
+                & > div.price_div {
+                    font-size: 12px;
+                }
+            }
+        }
         &::-webkit-scrollbar {
             height: 0px !important;
         }
@@ -790,24 +837,6 @@
         }
         &::-webkit-scrollbar-thumb {
             background: #ffffff !important;
-        }
-    }
-    &-avatar {
-        width: 107.69px;
-        height: 82.28px;
-        position: relative;
-        text-align: center;
-        margin: auto;
-        padding: 0px;
-        margin-top: 75px;
-        .empty-avatar {
-            width: max-content;
-            height: auto;
-        }
-        .isolated-icons {
-            width: max-content;
-            height: auto;
-            position: absolute;
         }
     }
 }
