--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -81,7 +81,7 @@
             }
         }
         .auction-left {
-            padding-right: 50px;
+            padding-right: 20px;
             @include mq("tablet") {
                 display: block !important;
             }
@@ -103,7 +103,6 @@
                         line-height: 17px;
                         text-transform: uppercase;
                         color: $grey;
-                        width: 50%;
                         text-align: center;
                         @include mq("tablet", max) {
                             font-size: 18px;
@@ -112,7 +111,6 @@
                         @include mq("phone", max) {
                             font-size: 14px;
                             line-height: 17px;
-                            width: 33.33%;
                             text-align: center;
                         }
                         &--selected {
@@ -137,6 +135,7 @@
                         line-height: 17px;
                         padding-left: 0;
                         padding-right: 0;
+                        width: auto;
                         &--selected {
                             font-size: 30px;
                             line-height: 37px;
@@ -171,6 +170,9 @@
                     display: flex;
                     justify-content: space-between;
                     border-bottom: 2px solid #464646;
+                    .react-tabs__tab {
+                        width: 50%;
+                    }
                     @include mq("tablet", max) {
                         justify-content: flex-start;
                     }
