--- a/src/styles/sass/page/admin/_setting.scss
+++ b/src/styles/sass/page/admin/_setting.scss
@@ -99,6 +99,12 @@ main.admin-setting-page {
                     }
                 }
                 div.task_table {
+                    overflow: auto;
+                    max-height: 70vh;
+                    @include mq('phone', max) {
+                        overflow: unset;
+                        max-height: unset;
+                    }
                     p {
                         font-size: 18px;
                         font-weight: 700;
