--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -114,6 +114,10 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.px-55px {
+    padding-left: 55px;
+    padding-right: 55px;
+}
 .pl-8px {
     padding-left: 8px;
 }
