--- a/src/styles/sass/components/_accordion.scss
+++ b/src/styles/sass/components/_accordion.scss
@@ -25,7 +25,7 @@
         border: none;
         font-size: 16px;
         line-height: 20px;
-        font-weight: 800;
+        font-weight: bold;
         @include mq("phone", max) {
             padding-right: 0;
         }
