--- a/src/styles/sass/components/_accordion.scss
+++ b/src/styles/sass/components/_accordion.scss
@@ -32,6 +32,7 @@
         .sign {
             font-size: 32px;
             font-weight: 400;
+            padding-left: 15px;
 
             &::after {
                 content: "+";
@@ -45,8 +46,8 @@
         overflow: hidden;
         padding-right: 40px;
         p {
-            font-weight: 500;
             color: white;
+            opacity: 0.9;
         }
     }
 }
