--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -137,7 +137,7 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 316px !important;
 }
 // Begin: New Font Sizes
-@for $size from 12 to 24 {
+@for $size from 12 to 48 {
     .fs-#{$size}px {
         font-size: #{$size}px !important;
     }
@@ -148,5 +148,14 @@ input[type="number"]::-webkit-outer-spin-button {
     @include mq("phone", min) {
         transform: scale(1, 1);
     }
+}
+.border-bottom-1px {
+    border-bottom: 1px !important;
+}
+.fv-small-caps {
+    font-variant: small-caps !important;
+}
+.fw-500 {
+    font-weight: 500 !important;
 }
 // End: New Font Sizes
