--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -158,4 +158,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .fw-500 {
     font-weight: 500 !important;
 }
+.lh-25px {
+    line-height: 25px !important;
+}
 // End: New Font Sizes
