--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -936,3 +936,18 @@
         margin-top: 50px;
     }
 }
+
+.stake-duration {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    & > div {
+        background-color: rgba(255, 255, 255, 0.1);
+        padding: 6px 8px;
+        cursor: pointer;
+    }
+    .active-duration {
+        border: 2px solid $green;
+    }
+}
