Wallet / Sake / Defi Staking / Developed this section

--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -951,3 +951,14 @@
         border: 2px solid $green;
     }
 }
+.clock-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.circle-light {
+    width: 20px;
+    height: 20px;
+    background-color: #c4c4c4;
+    border-radius: 50%;
+}
