--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -42,6 +42,7 @@
 @import "page/admin/create/user";
 @import "page/admin/create/avatar";
 @import "page/admin/create/email";
+@import "page/admin/create/token";
 @import "page/admin/create/customize-avatar";
 @import "page/admin/airdrop";
 @import "page/admin/setting";
