--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -1,5 +1,7 @@
 .history-page {
     background-color: $black;
+    margin-bottom: 1rem;
+    margin-top: -1rem;
     .menu {
         border-bottom: 2px solid #464646;
     }
