Wallet / Market / Search / Fixed the design and functionality

--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -324,7 +324,7 @@
                 width: 100%;
                 .search {
                     display: flex;
-                    justify-content: flex-end;
+                    justify-content: flex-start;
                     .search-icon {
                         margin: 12px;
                         width: 20px;
