--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -42,22 +42,27 @@
             justify-content: space-between;
             align-items: center;
             border: none;
-            margin-bottom: 0px;
+            margin-bottom: 10px;
         }
         &-list {
             font-weight: 600;
-            font-size: 18px;
-            line-height: 29px;
-            padding: 8px 3px;
+            font-size: 16px;
+            height: 50px;
+            padding: 0 3px;
             border: 1px solid white;
-            &[aria-selected="false"] {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            label {
+                color: black;
+            }
+            &[aria-selected="false"] label {
                 color: rgba(255, 255, 255, 0.5);
             }
             text-transform: uppercase;
             cursor: pointer;
             @include mq("laptop-wide", max) {
                 font-size: 12px;
-                padding: 8px 0px;
             }
             @include mq("laptop", max) {
                 font-size: 12px;
@@ -273,7 +278,7 @@
                 height: 100%;
                 padding-top: 15px;
                 padding-bottom: 15px;
-                border: 2px solid white;
+                border: 1px solid white;
                 img {
                     margin-bottom: 12px;
                     width: 32px;
@@ -461,5 +466,5 @@
     display: flex;
     height: 274px;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
 }
