--- a/src/styles/sass/page/admin/_setting.scss
+++ b/src/styles/sass/page/admin/_setting.scss
@@ -34,10 +34,10 @@ main.admin-setting-page {
                             padding-bottom: 10px;
                             border-bottom: 2px solid #464646;
                             margin: 0;
-                            @include mq("phone", max) {
-                                display: flex;
-                                justify-content: space-between;
-                            }
+                            // @include mq("phone", max) {
+                            //     display: flex;
+                            //     justify-content: space-between;
+                            // }
                             .react-tabs__tab {
                                 color: $dimgrey;
                                 border: none;
