--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -34,6 +34,21 @@
         @include mq("tablet", max) {
             padding: 0;
         }
+        button {
+            margin-top: 10px;
+        }
+        .connected {
+            border: 1px solid #23c865;
+            padding: 10px;
+            p {
+                color: #23c865;
+                margin: 10px 0;
+            }
+            img {
+                margin: 10px 0;
+                width: 90px;
+            }
+        }
         .react-tabs__tab-list {
             @include mq("tablet", max) {
                 display: none;
