add 2fa preview

--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -175,6 +175,9 @@
                 width: 100%;
             }
             &_labels {
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
                 text-align: left;
                 &_type {
                     font-size: 18px;
